<resources>
    <string name="app_name">food_app_2</string>

    <!-- Bottom navigator -->
    <string name="home_icon">Home</string>
    <string name="person_icon">Person</string>
    <string name="cart_icon">Cart</string>

    <!-- Log in screen -->
    <string name="sign_in_label">Sign in</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="or_label">Or</string>

    <!-- Home page screen -->
    <string name="deliver_label">Deliver to</string>
    <string name="name_street_label">27/70/50 Street 9, Ward 16, Go Vap Distress</string>
    <string name="what_would_you_like_to_order_text_view_home_page">What would you like to order</string>
    <string name="hello_text_view_home_screen">Hello</string>


    <string name="plus">+</string>

    <!-- Log in layout -->
    <string name="username_enter_hint">Enter your email</string>
    <string name="enter_password_hint">Enter password</string>
    <string name="don_t_have_an_account_textView">Don\'t have an account?</string>
    <string name="sign_up_textView">Sign up</string>
    <string name="my_cart_cartListView_Cart">My cart</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Restaurant address at app home page-->
    <string name="for_you_text_view">For you</string>
    <string name="kfc_thong_nhat_address">KFC - Thong Nhat</string>
    <string name="popeyes_le_duc_tho_address">Popeyes - Le Duc Tho</string>
    <string name="star_buck_quang_trung_address">Starbucks - Quang Trung</string>
    <string name="place_your_order">Place your order</string>
    <string name="clear_order_button">Clear order</string>

    <!--Registration layout-->
    <string name="back_button_registrar">Back</string>
    <string name="sign_up_text_view">Sign up new account</string>
    <string name="email_hint_editText">Email</string>
    <string name="password_hint_editText">Password</string>
    <string name="confirm_password_hint_editText">Confirm password</string>
    <string name="i_agree_to_the_terms_and_condition_checkBox">I agree to the Terms and Condition</string>
    <string name="register_button">Sign Up</string>
    <string name="phone_number_hint">Phone number</string>

    <!--Custom enter address dialog -->
    <string name="enter_your_current_location_text_view">Are you sure with your current location</string>
    <string name="yes_dialog_button">Yes</string>
    <string name="no_dialog_button">No</string>
    <!--Search view -->
    <string name="no_food_found_text_view">No Food Found</string>

    <!--Custom log out dialog -->
    <string name="my_profile_text_view">My profile</string>
    <string name="are_you_sure_you_want_to_log_out_text_view">Are you sure you want to log out ?</string>
    <string name="forgot_password_text_view">FORGOT PASSWORD</string>

    <!--Forgot password view -->
    <string name="email_provide_text_view">Provide your email\'s account for which you want to reset password</string>
    <string name="email_hint_provide">Email</string>


    <!-- Profile -->
    <string name="username_profile">Username</string>
    <string name="phone_number_profile">Phone number</string>
    <string name="email_profile">Email</string>
    <string name="save_changes_profile_button">Save changes</string>
</resources>