<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/are_you_sure_you_want_to_log_out_text_view"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="25dp"
            android:layout_gravity="center"
            />


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/yes_dialog_button_profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/yes_dialog_button"
                android:textColor="@color/white"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black"
                android:backgroundTint="@color/green"
                android:padding="12dp"
                android:layout_marginEnd="10dp"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/no_dialog_button_profile"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="12sp"
                android:text="@string/no_dialog_button"
                android:textColor="@color/white"
                app:strokeWidth="2dp"
                app:strokeColor="@color/black"
                android:backgroundTint="@color/red"
                android:padding="12dp"
                android:layout_marginEnd="10dp"
                />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>